finished adding links and resume is downloadable

--- a/portfolio/public/index.html
+++ b/portfolio/public/index.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" href="%PUBLIC_URL%/css/default.css" />
 		<link rel="stylesheet" href="%PUBLIC_URL%/css/layout.css" />
 		<link rel="stylesheet" href="%PUBLIC_URL%/css/media-queries.css" />
-		<link rel="stylesheet" href="%PUBLIC_URL%/css/magnific-popup.css" />
+		<!-- <link rel="stylesheet" href="%PUBLIC_URL%/css/magnific-popup.css" /> -->
 
 		<title>Blake Wright</title>
 	</head>
@@ -31,7 +31,7 @@
 		<script src="js/jquery.flexslider.js"></script>
 		<script src="js/waypoints.js"></script>
 		<script src="js/jquery.fittext.js"></script>
-		<script src="js/magnific-popup.js"></script>
+		<!-- <script src="js/magnific-popup.js"></script> -->
 		<script src="js/init.js"></script>
 	</body>
 </html>
